--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,20 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@font-face {
+  font-family: "Formula1 Display Regular";
+  src: url("../fonts/Formula1-Regular.otf") format("opentype");
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@font-face {
+  font-family: "Formula1 Display Bold";
+  src: url("../fonts/Formula1-Bold.otf") format("opentype");
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: "Formula1 Display Wide";
+  src: url("../fonts/Formula1-Wide.otf") format("opentype");
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+body{
+  font-family: "Formula1 Display Regular";
 }
